--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
-<!-- saved from url=(0025)https://michaelreeves.us/ -->
 <html lang="en" class="gr__markgines.com><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
@@ -40,13 +38,13 @@
 
 
 	<aside class="topNav nav-blue" id="topNav"><div class="container navBar">
-	<a href="http://markgines.com"><h2>Home</h2> </a><a href="mailto:mark@markgines.com?Subject=Hi%20Mark"><h2>E-Mail</h2></a><a href="/info/resume.pdf"><h2>Resume</h2> </a></div></aside>
+	<a href="https://markgines.com"><h2>Home</h2> </a><a href="mailto:mark@markgines.com?Subject=Hi%20Mark"><h2>E-Mail</h2></a><a href="/info/resume.pdf"><h2>Resume</h2> </a></div></aside>
 	
     <div id="top" class="pageHeader">
         <div class="headerText">
             
             <h1><b>Mark Gines</b></h1>
-            <h2>Website Desgner</h2>
+            <h2>Website Designer</h2>
         </div>
     </div>
 
