--- a/info/index.html
+++ b/info/index.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
-<!-- saved from url=(0025)https://michaelreeves.us/ -->
-<html lang="en" class="gr__michaelreeves_us"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en" class="gr__markgines.com><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="Mark Gines">
 	
-    <title>Information</title>
+    <title>Mark Gines Portfolio</title>
 
    <!-- <link rel="shortcut icon" type="image/png" href="https://michaelreeves.us/img/favicon.png"> -->
-    <link href="https://michaelreeves.us/css/bootstrap.min.css" rel="stylesheet">
-	<link href="https://michaelreeves.us/css/portfolio.css" rel="stylesheet">
+    <link href="https://markgines.com/css/bootstrap.css" rel="stylesheet">
+	<link href="https://markgines.com/css/portfolio.css" rel="stylesheet">
 
-    <link href="https://michaelreeves.us/css/stylish-portfolio.css" rel="stylesheet">
+    <link href="https://markgines.com/css/stylish.css" rel="stylesheet">
+	 <link href="https://markgines.com/css/okboomer.css" rel="stylesheet">
 
-    <link href="https://michaelreeves.us/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="./files/css" rel="stylesheet" type="text/css">
-    <link href="./files/css(1)" rel="stylesheet">
+    <link href="https://markgines.com/css/font.css" rel="stylesheet" type="text/css">
+    <link href="./files/css.css" rel="stylesheet" type="text/css">
+    <link href="./files/css(1).css" rel="stylesheet">
 
-	<script async="" src="./files/analytics.js.download"></script><script src="./files/jquery.min.js.download"></script>
+	<script async="" src="./files/analytics.js"></script><script src="./files/jquery.min.js"></script>
 
-	<script src="https://michaelreeves.us/js/portfolio.js"></script>
-    <script src="https://michaelreeves.us/js/jquery.js"></script>
-    <script src="https://michaelreeves.us/js/bootstrap.min.js"></script>
+	<script src="https://markgines.com/js/portfolio.js"></script>
+    <script src="https://markgines.com/js/jQuery.js"></script>
+    <script src="https://markgines.com/js//bootstrapjs"></script>
 
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -54,4 +53,3 @@
 
 
 </body></html>
-
