--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	
     <title>Mark Gines Portfolio</title>
 
-   <!-- <link rel="shortcut icon" type="image/png" href="https://michaelreeves.us/img/favicon.png"> -->
+   <link rel="shortcut icon" type="image/png" href="https://markgines/files/favicon.png">
     <link href="https://markgines.com/css/bootstrap.css" rel="stylesheet">
 	<link href="https://markgines.com/css/portfolio.css" rel="stylesheet">
 
