--- a/cad/login/login.html
+++ b/cad/login/login.html
@@ -6,8 +6,8 @@
     <title> CAD | Login</title>
     <meta name="description" content="BuilderX Web Portal">
 
-    <meta property="og:title" content="BuilderX">
-    <meta property="og:description" content="Login Page">
+    <meta property="og:title" content="CAD LOGIN">
+    <meta property="og:description" content="Kill yourself Cheif">
     <meta property="og:image" content="icons/android-chrome-384x384.png">
 
     <script defer src="login.js"></script>
