--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 <title>404</title>
 
 <link rel="stylesheet" href="style.css" type="text/css" />
-<link href="style.css" rel="stylesheet">
+<link href="https://markgines.com/style.css" rel="stylesheet">
 
 
 
