--- a/404.html
+++ b/404.html
@@ -7,7 +7,6 @@
 <link href="https://markgines.com/style.css" rel="stylesheet">
 
 
-
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M27JCG"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
@@ -28,6 +27,8 @@ body {
 
 <section class="content flex flex-1 flex-align-center">
 <div class="inner-content">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/JRM7zQk8xJg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 <h1>It appears you are <span>as lost as me.</span></h1>
 <p><a href="https://markgines.com" class="btn btn-border-white btn-text-white">Return to Homepage</a></p>
 </div>
